--- a/src/styles/scss/page.scss
+++ b/src/styles/scss/page.scss
@@ -1,8 +1,10 @@
 .page {
-  padding: 20px;
+  // padding: 20px;
   flex-grow: 1;
   margin-top: 58px;
-  margin-bottom: 52px;
+  margin-bottom: 50px;
+  //
+  overflow: scroll;
 }
 
 .container {
